# numblitz-server

./: .gitignore  categories.json  katex-test.html  launch.py  makefile  pyproject.toml  requirements.txt
html-tests/: katex-test.html
src/: config.py  main.py
src/assets/: categories.json
src/base/: cloudflared.py  fastapi_instance.py  lifespan.py  oauth.py
src/config/: __init__.py  clients.py  logs.py
src/database/: __init__.py  main.py  mathgen.py  migrate.py  models.py
src/database/scripts/: add_update_categories.py
src/mathgen/math/: evaluate.py  precise_num.py
src/mathgen/math/evalfuncs/: all.py  capture.py  flags.py  iter.py  math.py  rand.py
src/routes/: __init__.py  admin.py  api.py
src/routes/admin/: __init__.py  main.py  mathgen.py  verify.py
src/routes/auth/: auth.py
src/routes/mathgen/: __init__.py  mathgen.py  modelprogress.py
src/routes/user/: main.py
src/scripts/: tex2image.py  upsert_categories.py
src/utils/: __init__.py  jinja.py  mathgen.py  rand.py
src/utils/auth/: __init__.py  depend.py  token.py
src/utils/jinja/: jinja_utils.py
src/utils/jinja/templates/admin/: editmodel.html  index.html  layout.html  listmodels.html  login.html  order.html  problem.html
src/utils/jinja/templates/mathviews/: explanation.html
templates/: categories.html  category.html  index.html  layout.html  macros.html  model.html
tex2image/: crossmul.tex
